# novex

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: admin_carriers.py  admin_customers.py  admin_orders.py  auth.py  health.py  orders.py  payments.py  profile.py  shipping.py
backend/app/common/: pagination.py
backend/app/core/: config.py  db.py  dependencies.py  email.py  exceptions.py  logging.py  redis.py  security.py
backend/app/db/: base.py
backend/app/modules/carriers/: models.py  tariff_engine.py  zone_mapper.py
backend/app/modules/identity/: models.py  repository.py  schemas.py  service.py
backend/app/modules/orders/: models.py  repository.py  schemas.py  service.py
backend/app/modules/payments/: kaspi_service.py
backend/app/modules/quotes/: models.py  repository.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_roles_users_profiles.py  002_quote_sessions_rate_quotes.py  003_order_draft_core.py  004_order_draft_route_snapshots.py  005_add_carriers_tables.py  006_add_rate_quotes_composite_index.py
backend/workers/: main.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
infra/compose/: docker-compose.dev.yml
infra/docker/: backend.Dockerfile  backend.dockerfile  frontend.Dockerfile  frontend.dockerfile  nginx.Dockerfile  worker.Dockerfile  worker.dockerfile
infra/nginx/: nginx.conf  routes.conf
(+31 files in other folders)
